# open-gram

./: .gitignore  Makefile  README.rst
corpus/: cleanup.py
data/: char_lint.py  dict.full  dict_license  stopword.utf8
lexicon/: Makefile  add_id.py  bh.txt  cedict.py  cedict2sunpinyin.py  dict.full  dict_head.utf8  extract_word.py  filters.py  filters_test.py  get_zhuyin.py  hanzi_table.utf8  merge.py  pinyin.py  search_filter.py  shrink.py  sort.py  stopword_filter.py  wordb.py
segment/crf/: baseseg.py
segment/tagging/: baseseg.py  cleanup.py  hanzi_util.py  preprocess.py
tools/CRF++-0.53/: Makefile.am  autogen.sh  configure.in
tools/CRF++-0.53/python/: Makefile.am  crfpp.i
tools/CRF++-0.53/src/: Makefile.am  crf_seg.cpp  encoder.cpp  lbfgs.cpp  lbfgs.h
tools/utils/: dict.full.patch  dict.utf8.patch  dict_sort.sh  entry_sort.py  extend-dict-full.py  extend-dict-utf8.py  extend-hanzi-table.py  extend_charmap.py  gen-dict-utf8.py  sort-arpa.py  sort-dict.py  sort-fields.py  sort_criteria.py  sunpinyin-dict-full-extend.py  sunpinyin-dict-utf8-extend.py  sunpinyin-hanzi-table-extend.py  sunpinyin_char_extend.py
